Fixed gap at Masonry-layout (...)
It was caused by the `<img>` tags which lacked the CSS property `vertical-align`.

More information:

- https://stackoverflow.com/questions/10266849/image-will-not-fill-div#10266919.
- https://maxdesign.com.au/articles/vertical-align/

--- a/src/.vuepress/theme/components/Portfolio/Portfolio.styl
+++ b/src/.vuepress/theme/components/Portfolio/Portfolio.styl
@@ -26,6 +26,7 @@
 
         img
           width 100%
+          vertical-align top
 
         .meta
           h1, h2, h3, p
@@ -72,14 +73,14 @@
             padding 2em
             width 100%
             height 100%
-            background-color #000
+            background-color rgba(0,0,0,.85)
             color #eee
             text-align center
             opacity 0
             transition opacity 0.25s ease-in-out
 
             &:hover
-              opacity 0.95
+              opacity 1
 
 @media screen and (prefers-color-scheme dark)
   .portfolio-overview
